--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "sass": "^1.77.2"
   },
   "scripts": {
-    "build": "sass --no-source-map src/index.scss dist/reset-css-lib.css",
+    "build": "sass --no-source-map src/reset.scss dist/reset-css-lib.css",
     "add-important": "sed -i.bak 's/;/ !important;/g' dist/reset-css-lib.css",
     "clean": "rm -rf dist"
   }
