--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
     "sass": "^1.77.2"
   },
   "scripts": {
-    "build:reset": "sass --no-source-map src/token/main.scss dist/reset.css",
-    "build:atom": "sass --no-source-map src/atom/main.scss dist/atom.css",
-    "build:pattern": "sass --no-source-map src/pattern/main.scss dist/pattern.css",
+    "build:reset": "sass --no-source-map --style=compressed src/token/main.scss dist/reset.css",
+    "build:atom": "sass --no-source-map --style=compressed src/atom/main.scss dist/atom.css",
+    "build:pattern": "sass --no-source-map --style=compressed src/pattern/main.scss dist/pattern.css",
+    "add-important": "find dist -type f -name '*.css' -exec sed -i.bak 's/;/ !important;/g' {} +",
     "clean": "rm -rf dist",
     "build": "yarn build:reset && yarn build:atom && yarn build:pattern",
     "watch": "nodemon --watch src --ext scss --exec 'yarn build'"
