--- a/package.json
+++ b/package.json
@@ -14,13 +14,15 @@
     "build:reset": "sass --no-source-map --style=compressed src/token/main.scss dist/reset.css",
     "build:atom": "sass --no-source-map --style=compressed src/atom/main.scss dist/atom.css",
     "build:pattern": "sass --no-source-map --style=compressed src/pattern/main.scss dist/pattern.css",
+    "build:lib": "sass --no-source-map --style=compressed src/main.scss dist/lib.css",
     "add-important": "find dist -type f -name '*.css' -exec sed -i.bak 's/;/ !important;/g' {} +",
     "clean": "rm -rf dist",
-    "build": "yarn build:reset && yarn build:atom && yarn build:pattern",
+    "build": "npm-run-all build:*",
     "watch": "nodemon --watch src --ext scss --exec 'yarn build'",
     "postbuild": "cp -R dist ./sample/public/"
   },
   "devDependencies": {
-    "nodemon": "^3.1.4"
+    "nodemon": "^3.1.4",
+    "npm-run-all": "^4.1.5"
   }
 }
